mostrar topics by projects
