# app/Http/Resources/ProjectResource.php
@@ -1,5 +1,4 @@
 <?php
-
 namespace App\Http\Resources;
 
 use Illuminate\Http\Request;
@@ -63,6 +62,12 @@ class ProjectResource extends JsonResource
      *         description="Descripción detallada del proyecto en español"
      *     ),
      *     @OA\Property(
+     *         property="topics",
+     *         type="array",
+     *         @OA\Items(ref="#/components/schemas/TopicResource"),
+     *         description="Temas del proyecto"
+     *     ),
+     *     @OA\Property(
      *         property="view_link",
      *         type="string",
      *         description="Enlace de visualización del proyecto"
@@ -97,26 +102,26 @@ class ProjectResource extends JsonResource
      *     )
      * )
      */
-
     public function toArray(Request $request): array
     {
         return [
-            "id" => $this->id,
-            "client_id" => $this->client_id,
-            "principal_project_id" => $this->principal_project_id,
-            "front_page" => new ImageResource($this->frontPage),
-            "title" => $this->title,
-            "spanish_title" => $this->spanish_title,
-            "short_description" => $this->short_description,
+            "id"                        => $this->id,
+            "client_id"                 => $this->client_id,
+            "principal_project_id"      => $this->principal_project_id,
+            "front_page"                => new ImageResource($this->frontPage),
+            "title"                     => $this->title,
+            "spanish_title"             => $this->spanish_title,
+            "short_description"         => $this->short_description,
             "spanish_short_description" => $this->spanish_short_description,
-            "description" => $this->description,
-            "spanish_description" => $this->spanish_description,
-            "view_link" => $this->view_link,
-            "download_link" => $this->download_link,
-            "video_link" => $this->video_link,
-            "date" => $this->date,
-            "created_at" => $this->created_at,
-            "updated_at" => $this->updated_at
+            "description"               => $this->description,
+            "spanish_description"       => $this->spanish_description,
+            'topics'                    => TopicResource::collection( $this->topics),
+            "view_link"                 => $this->view_link,
+            "download_link"             => $this->download_link,
+            "video_link"                => $this->video_link,
+            "date"                      => $this->date,
+            "created_at"                => $this->created_at,
+            "updated_at"                => $this->updated_at,
         ];
     }
 }
